# snake

./: Cargo.toml  README.md  index.html
pkg/: snake.d.ts  snake.js  snake_bg.wasm  snake_bg.wasm.d.ts
src/: board.rs  lib.rs  main.rs  random.rs  snake.rs  square.rs
