[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.58"

[dependencies.web-sys]
version = "0.3.58"
features = [
    "CssStyleDeclaration",
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "KeyboardEvent",
    "Window",
]